Consumption track almost done, partial UI changes

--- a/app/src/main/res/layouts/buy_tokens_fragment_layouts/layout/buy_tokens_main_content_layout.xml
+++ b/app/src/main/res/layouts/buy_tokens_fragment_layouts/layout/buy_tokens_main_content_layout.xml
@@ -56,7 +56,7 @@
         android:text="@string/buy_tokens_header"
         android:textAlignment="center"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         app:layout_constraintEnd_toStartOf="@+id/guidelineAllWidgetsRight"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllWidgetsLeft"
         app:layout_constraintTop_toTopOf="@+id/guidelineHeaderTop" />
@@ -93,7 +93,7 @@
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintEnd_toStartOf="@+id/guidelineAllWidgetsRight"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllWidgetsLeft"
         app:layout_constraintTop_toTopOf="@+id/guidelineEditCashTop" />
@@ -109,7 +109,7 @@
         android:fontFamily="@font/lato_bold"
         android:text="@string/or"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         app:layout_constraintBottom_toTopOf="@+id/editUnitsAmnt"
         app:layout_constraintEnd_toStartOf="@+id/guidelineAllWidgetsRight"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllWidgetsLeft"
@@ -131,7 +131,7 @@
         android:inputType="number"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         android:fontFamily="@font/lato_bold"
         android:background="@drawable/solid_ash_bg"
         app:layout_constraintEnd_toStartOf="@+id/guidelineAllWidgetsRight"
@@ -150,7 +150,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/suggest_units"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         android:textColor="@color/custom_grey"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllWidgetsLeft"
@@ -161,10 +161,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="150"
-        android:textSize="14sp"
-        android:textColor="@color/custom_grey"
         android:fontFamily="@font/lato_regular"
+        android:text="150 Units"
+        android:textColor="@color/custom_grey"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintStart_toEndOf="@+id/txtSuggestedUnits"
         app:layout_constraintTop_toTopOf="@+id/guidelineSuggestedUnitsTop" />
 
@@ -180,7 +180,7 @@
         android:text="@string/view_hist"
         android:textAllCaps="false"
         android:textColor="@color/black"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/txtShowSuggestedNumUnits"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txtShowSuggestedNumUnits" />
@@ -198,7 +198,7 @@
         android:layout_height="wrap_content"
         android:text="@string/purchase"
         android:textAllCaps="false"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:textColor="@color/black"
         android:fontFamily="@font/lato_regular"
         android:background="@drawable/login_signup_btn_bg"
@@ -215,7 +215,7 @@
         android:layout_height="wrap_content"
         android:text="For account: 23456712345"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         android:fontFamily="@font/lato_bold"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllWidgetsLeft"
         app:layout_constraintTop_toTopOf="@+id/guidelineFragmentContentsStart" />
