--- a/app/src/main/res/layouts/buy_tokens_fragment_layouts/layout/switch_acc_fab_content_layout.xml
+++ b/app/src/main/res/layouts/buy_tokens_fragment_layouts/layout/switch_acc_fab_content_layout.xml
@@ -45,7 +45,7 @@
         android:buttonTint="@color/white"
         android:checked="true"
         android:fontFamily="@font/lato_regular"
-        android:text="87937562991"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/txtSwitchAccHeader"
@@ -58,7 +58,7 @@
         android:layout_marginTop="20dp"
         android:buttonTint="@color/white"
         android:fontFamily="@font/lato_regular"
-        android:text="86541278923"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/radioBtnAcc1"
@@ -71,7 +71,7 @@
         android:layout_marginTop="20dp"
         android:buttonTint="@color/white"
         android:fontFamily="@font/lato_regular"
-        android:text="45126751654"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/radioBtnAcc2"
@@ -85,7 +85,7 @@
         android:layout_marginBottom="56dp"
         android:buttonTint="@color/white"
         android:fontFamily="@font/lato_regular"
-        android:text="78942136422"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
