--- a/app/src/main/res/layouts/check_and_pay_bill_fragment_layouts/layout/check_and_pay_bill_main_content_layout.xml
+++ b/app/src/main/res/layouts/check_and_pay_bill_fragment_layouts/layout/check_and_pay_bill_main_content_layout.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="For account no: 34598218756"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         android:fontFamily="@font/lato_bold"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllContentsStart"
         app:layout_constraintTop_toTopOf="@+id/guidelineAllLayoutContentsTop" />
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:text="@string/outstanding_bill"
         android:textColor="@color/kplcGreen"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_header1"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllContentsStart"
         app:layout_constraintTop_toTopOf="@+id/guidelinePostPaidHeaderTop" />
@@ -58,7 +58,7 @@
         android:layout_marginTop="20dp"
         android:text="Ksh 2300"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllContentsStart"
         app:layout_constraintTop_toBottomOf="@+id/txtOutstandingBill" />
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:text="@string/meter_reading"
         android:textColor="@color/kplcGreen"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_header1"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllContentsStart"
         app:layout_constraintTop_toTopOf="@+id/guidelineMeterReadingTop" />
@@ -88,7 +88,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/previous_reading"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllContentsStart"
         app:layout_constraintTop_toBottomOf="@+id/txtMeterReading" />
@@ -100,7 +100,7 @@
         android:layout_marginStart="80dp"
         android:text="345"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintBottom_toBottomOf="@+id/txtPreviousReading"
         app:layout_constraintStart_toEndOf="@+id/txtPreviousReading"
@@ -113,7 +113,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/current_reading"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintStart_toStartOf="@+id/txtPreviousReading"
         app:layout_constraintTop_toBottomOf="@+id/txtPreviousReading" />
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:text="550"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintBottom_toBottomOf="@+id/txtCurrentReading"
         app:layout_constraintStart_toStartOf="@+id/txtShwPreviousReading"
@@ -137,7 +137,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/units_consumed"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintStart_toStartOf="@+id/txtCurrentReading"
         app:layout_constraintTop_toBottomOf="@+id/txtCurrentReading" />
@@ -148,7 +148,7 @@
         android:layout_height="wrap_content"
         android:text="205"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintBottom_toBottomOf="@+id/txtUnitsConsumed"
         app:layout_constraintStart_toStartOf="@+id/txtShwCurrentReading"
@@ -167,7 +167,7 @@
         android:layout_height="wrap_content"
         android:text="@string/due_date"
         android:textColor="@color/kplcGreen"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_header1"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllContentsStart"
         app:layout_constraintTop_toTopOf="@+id/guidelineDueDateTop" />
@@ -179,7 +179,7 @@
         android:layout_marginTop="20dp"
         android:text="12/05/2019"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:fontFamily="@font/lato_regular"
         app:layout_constraintStart_toStartOf="@+id/guidelineAllContentsStart"
         app:layout_constraintTop_toBottomOf="@+id/txtDueDate" />
@@ -196,14 +196,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.2944" />
+        app:layout_constraintGuide_percent="0.2744" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelineBtnPayEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.7056" />
+        app:layout_constraintGuide_percent="0.7256" />
 
     <Button
         android:id="@+id/btnPay"
@@ -212,7 +212,7 @@
         android:text="@string/pay_stima"
         android:textAllCaps="false"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:fontFamily="@font/lato_regular"
         android:background="@drawable/green_border_btn_bg"
         android:drawableLeft="@drawable/ksh_note"
@@ -235,7 +235,7 @@
         android:layout_marginEnd="32dp"
         android:text="Are you sure you want to pay Ksh2300 to KPLC Post Paid account 45638276219"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:textColor="@color/custom_grey"
         android:fontFamily="@font/lato_regular"
         android:translationY="100dp"
@@ -250,7 +250,7 @@
         android:layout_marginTop="18dp"
         android:text="@string/yes"
         android:textColor="@color/kplcGreen"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:textAllCaps="false"
         android:fontFamily="@font/lato_bold"
         android:translationY="150dp"
@@ -264,7 +264,7 @@
         android:layout_height="wrap_content"
         android:text="@string/no"
         android:textColor="@color/kplcGreen"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         android:textAllCaps="false"
         android:fontFamily="@font/lato_bold"
         android:translationY="150dp"
