--- a/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_fragment_layout.xml
+++ b/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_fragment_layout.xml
@@ -46,7 +46,7 @@
             android:fontFamily="@font/lato_regular"
             android:text="@string/quick_stats"
             android:textColor="@color/kplcGreen"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_size_header1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,7 +60,7 @@
             android:text="@string/switch_acc"
             android:textAllCaps="false"
             android:textColor="@color/custom_grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_header2"
             android:gravity="bottom"
             app:layout_constraintBottom_toBottomOf="@+id/txtQuickStats"
             app:layout_constraintStart_toEndOf="@+id/txtQuickStats"
@@ -75,7 +75,7 @@
             android:fontFamily="@font/lato_regular"
             android:text="@string/highest"
             android:textColor="@color/custom_grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_header2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtQuickStats" />
 
@@ -87,7 +87,7 @@
             android:fontFamily="@font/lato_regular"
             android:text="@string/average"
             android:textColor="@color/custom_grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_header2"
             app:layout_constraintStart_toEndOf="@+id/txtHighest"
             app:layout_constraintTop_toTopOf="@+id/txtHighest" />
 
@@ -112,7 +112,7 @@
             android:fontFamily="@font/lato_regular"
             android:text="100"
             android:textColor="@color/custom_grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_header2"
             app:layout_constraintStart_toStartOf="@+id/txtHighest"
             app:layout_constraintTop_toBottomOf="@+id/txtHighest" />
 
@@ -125,7 +125,7 @@
             android:fontFamily="@font/lato_regular"
             android:text="1000"
             android:textColor="@color/custom_grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_header2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/txtShwTokenHighest"
             app:layout_constraintTop_toBottomOf="@+id/txtShwTokenHighest" />
@@ -137,7 +137,7 @@
             android:layout_marginEnd="46dp"
             android:text="@string/tokens"
             android:textColor="@color/custom_grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_header2"
             android:fontFamily="@font/lato_regular"
             app:layout_constraintBottom_toBottomOf="@+id/txtShwTokenHighest"
             app:layout_constraintEnd_toStartOf="@+id/txtShwTokenHighest"
@@ -149,7 +149,7 @@
             android:layout_height="wrap_content"
             android:text="@string/cash_amnt"
             android:textColor="@color/custom_grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_header2"
             android:fontFamily="@font/lato_regular"
             app:layout_constraintBottom_toBottomOf="@+id/txtShwAmntHighest"
             app:layout_constraintEnd_toEndOf="@+id/txtTokens"
@@ -163,7 +163,7 @@
             android:layout_marginBottom="8dp"
             android:text="80"
             android:textColor="@color/custom_grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_header2"
             android:fontFamily="@font/lato_regular"
             app:layout_constraintBottom_toBottomOf="@+id/txtShwTokenHighest"
             app:layout_constraintStart_toStartOf="@+id/txtAverage"
@@ -175,7 +175,7 @@
             android:layout_height="wrap_content"
             android:text="870"
             android:textColor="@color/custom_grey"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_header2"
             android:fontFamily="@font/lato_regular"
             app:layout_constraintBottom_toBottomOf="@+id/txtShwAmntHighest"
             app:layout_constraintStart_toStartOf="@+id/txtShwTokenAverage"
