--- a/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_list_fragment_layout.xml
+++ b/app/src/main/res/layouts/my_purchase_history_fragment_layouts/layout/purchase_history_list_fragment_layout.xml
@@ -16,26 +16,24 @@
         android:fontFamily="@font/lato_regular"
         android:text="@string/full_hist"
         android:textColor="@color/kplcGreen"
-        android:textSize="20sp"
+        android:textSize="@dimen/text_size_header1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnSort"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
         android:drawableLeft="@drawable/sort_icon"
         android:fontFamily="@font/lato_regular"
         android:text="@string/sort"
         android:textAllCaps="false"
         android:textColor="@color/black"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/txtFullHistory"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtFullHistory"
         app:layout_constraintTop_toTopOf="@+id/txtFullHistory" />
 
