--- a/app/src/main/res/layouts/kplc_responses_fragment_layouts/layout/kplc_responses_main_recycler_list_item_test.xml
+++ b/app/src/main/res/layouts/kplc_responses_fragment_layouts/layout/kplc_responses_main_recycler_list_item_test.xml
@@ -8,19 +8,29 @@
     android:background="@color/white">
 
 
-    <android.support.constraint.utils.ImageFilterView
-        android:id="@+id/listItemBackground"
+    <ImageView
+        android:id="@+id/expandedBg"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:alpha="0.0"
         android:scaleType="fitXY"
-        android:src="@drawable/msg_thread_bg"
-        app:altSrc="@drawable/msg_thread_bg_expanded"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:srcCompat="@drawable/msg_thread_bg_expanded" />
+
+    <ImageView
+        android:id="@+id/shrunkBg"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:alpha="1.0"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/msg_thread_bg" />
 
     <TextView
         android:id="@+id/txtResponseHeader"
@@ -31,7 +41,7 @@
         android:fontFamily="@font/lato_bold"
         android:text="Power Report 23/3/2019 - REF 23456698827392"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/kplcLogoResponses"
         app:layout_constraintEnd_toStartOf="@+id/txtTime"
         app:layout_constraintStart_toEndOf="@+id/kplcLogoResponses"
@@ -66,9 +76,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
         android:background="@android:color/transparent"
-        android:translationX="-600dp"
+        android:translationY="100dp"
         app:layout_constraintBottom_toBottomOf="@+id/editReply"
-        app:layout_constraintEnd_toEndOf="@+id/listItemBackground"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/editReply"
         app:srcCompat="@drawable/send_btn" />
 
@@ -90,9 +100,9 @@
         android:paddingBottom="12dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:textSize="14sp"
-        android:translationX="-600dp"
-        app:layout_constraintBottom_toBottomOf="@+id/listItemBackground"
+        android:textSize="@dimen/text_size_body"
+        android:translationY="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -105,7 +115,7 @@
         android:fontFamily="@font/lato_regular"
         android:text="Hi Ian, we've received your complaint. Our..."
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         android:translationX="0dp"
         android:alpha="1.0"
         app:layout_constraintEnd_toEndOf="@+id/txtTime"
@@ -118,7 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
         android:text="10:20PM"
-        android:textSize="12sp"
+        android:textSize="@dimen/text_size_micro"
         android:translationX="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/txtResponseHeader"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +143,7 @@
         android:text="1"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="@dimen/text_size_micro"
         app:layout_constraintBottom_toTopOf="@+id/kplcLogoResponses"
         app:layout_constraintEnd_toEndOf="@+id/kplcLogoResponses"
         app:layout_constraintHorizontal_bias="0.29"
