--- a/app/src/main/res/layouts/inbox_fragment_layouts/layout/inbox_fragment_layout.xml
+++ b/app/src/main/res/layouts/inbox_fragment_layouts/layout/inbox_fragment_layout.xml
@@ -34,7 +34,7 @@
         android:text="@string/inbox_prompt"
         android:textColor="@color/custom_grey"
         android:fontFamily="@font/lato_regular"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         app:layout_constraintBottom_toBottomOf="@+id/imgInboxLogo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imgInboxLogo"
@@ -71,14 +71,14 @@
         android:ems="10"
         android:hint="@string/reply_prompt"
         android:inputType="textMultiLine"
-        android:maxHeight="100dp"
+        android:maxHeight="60dp"
         android:paddingLeft="21dp"
         android:paddingTop="12dp"
         android:paddingRight="16dp"
         android:paddingBottom="12dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/msgSendBtn"
         app:layout_constraintEnd_toEndOf="@+id/msgSendBtn"
         app:layout_constraintHorizontal_bias="0.507"
