--- a/app/src/main/res/layouts/report_power_fragment_layouts/layout/describe_problem_layout.xml
+++ b/app/src/main/res/layouts/report_power_fragment_layouts/layout/describe_problem_layout.xml
@@ -16,6 +16,7 @@
         android:textColor="@color/custom_grey"
         app:buttonTint="@color/kplcGreen"
         android:translationX="0dp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,6 +30,7 @@
         android:textColor="@color/custom_grey"
         app:buttonTint="@color/kplcGreen"
         android:translationX="0dp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/radioBlackout" />
 
@@ -51,6 +53,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="0/200"
+            android:textSize="@dimen/text_size_body"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,7 +70,7 @@
             android:inputType="textMultiLine"
             android:maxLength="200"
             android:scrollbars="vertical"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_size_body"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +98,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="@font/lato_regular"
         android:text="@string/other"
+        android:textSize="@dimen/text_size_body"
         android:textColor="@color/custom_grey"
         app:buttonTint="@color/kplcGreen"
         app:layout_constraintStart_toStartOf="parent"
