--- a/app/src/main/res/layouts/report_power_fragment_layouts/layout/provide_location_layout.xml
+++ b/app/src/main/res/layouts/report_power_fragment_layouts/layout/provide_location_layout.xml
@@ -29,7 +29,7 @@
             android:backgroundTint="@color/white"
             android:hint="@string/type_location"
             android:textColor="@color/custom_grey"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_size_body"
             android:inputType="text"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -43,7 +43,7 @@
         android:fontFamily="@font/lato_bold"
         android:text="@string/or"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editLocation" />
@@ -69,6 +69,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/lato_regular"
         android:text="@string/find_location"
+        android:textSize="@dimen/text_size_body"
         android:textColor="@color/custom_grey"
         android:alpha="1.0"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +84,7 @@
         android:textColor="@color/custom_grey"
         android:fontFamily="@font/lato_regular"
         android:alpha="0.0"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/txtFindMyLocation"
         app:layout_constraintEnd_toEndOf="@+id/txtFindMyLocation"
         app:layout_constraintStart_toStartOf="@+id/txtFindMyLocation"
@@ -97,6 +99,7 @@
         android:drawableLeft="@drawable/plus_sign"
         android:fontFamily="@font/lato_regular"
         android:text="@string/cancel"
+        android:textSize="@dimen/text_size_body"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:translationX="0dp"
@@ -110,6 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="Riat Area, Kisumu West"
+        android:textSize="@dimen/text_size_body"
         android:textColor="@color/custom_grey"
         android:fontFamily="@font/lato_regular"
         android:translationX="0dp"
@@ -121,6 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:text="@string/retry"
+        android:textSize="@dimen/text_size_body"
         android:textAllCaps="false"
         android:textColor="@color/custom_red"
         android:background="@android:color/transparent"
