--- a/app/src/main/res/layouts/report_power_fragment_layouts/layout/send_report_layout.xml
+++ b/app/src/main/res/layouts/report_power_fragment_layouts/layout/send_report_layout.xml
@@ -17,7 +17,7 @@
         android:text="@string/finish_report"
         android:textAlignment="center"
         android:textColor="@color/custom_grey"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_header2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
