--- a/app/src/main/res/layouts/settings_fragment_layouts/layout/add_account_layout.xml
+++ b/app/src/main/res/layouts/settings_fragment_layouts/layout/add_account_layout.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:text="@string/acc_num"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
@@ -46,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="@string/add_acc"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toTopOf="@+id/ashLine"
         app:layout_constraintStart_toStartOf="@+id/imageView2" />
 
@@ -60,6 +62,7 @@
         android:ems="10"
         android:inputType="number"
         android:padding="8dp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txtAccNum"
