--- a/app/src/main/res/layouts/settings_fragment_layouts/layout/settings_fragment_change_personal_details.xml
+++ b/app/src/main/res/layouts/settings_fragment_layouts/layout/settings_fragment_change_personal_details.xml
@@ -22,7 +22,7 @@
         android:text="@string/change_pers_details"
         android:textAlignment="gravity"
         android:textColor="@color/kplcGreen"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_header1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +43,7 @@
         android:fontFamily="@font/lato_regular"
         android:text="@string/change_id"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/bulletMarkerChangeId"
         app:layout_constraintStart_toEndOf="@+id/bulletMarkerChangeId"
         app:layout_constraintTop_toTopOf="@+id/bulletMarkerChangeId" />
@@ -66,7 +66,7 @@
         android:fontFamily="@font/lato_regular"
         android:text="@string/change_phone"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/bulletChangePhone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txtChangeId"
@@ -79,6 +79,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:text="@string/back"
+        android:textSize="@dimen/text_size_body"
         android:textAllCaps="false"
         android:textColor="@color/custom_grey"
         android:translationX="200dp"
