--- a/app/src/main/res/layouts/settings_fragment_layouts/layout/settings_fragment_manage_acc.xml
+++ b/app/src/main/res/layouts/settings_fragment_layouts/layout/settings_fragment_manage_acc.xml
@@ -22,7 +22,7 @@
         android:text="@string/manage_acc_header"
         android:textAlignment="gravity"
         android:textColor="@color/kplcGreen"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_header1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,7 +49,7 @@
         android:scaleY="1.0"
         android:text="12983546198 (main)"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         android:translationX="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/bulletMarkerMain"
         app:layout_constraintStart_toEndOf="@+id/bulletMarkerMain"
@@ -77,7 +77,7 @@
         android:scaleY="1.0"
         android:text="93829488333"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         android:translationX="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/bulletMarkerAcc2"
         app:layout_constraintStart_toStartOf="@+id/txtMainAcc"
@@ -106,7 +106,7 @@
         android:scaleY="1.0"
         android:text="94827492848"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         android:translationX="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/bulletMarkerAcc3"
         app:layout_constraintStart_toStartOf="@+id/txtAcc2"
@@ -135,7 +135,7 @@
         android:scaleY="1.0"
         android:text="86727933476"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         android:translationX="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/bulletMarker4"
         app:layout_constraintStart_toStartOf="@+id/txtAcc3"
@@ -153,7 +153,7 @@
         android:textAlignment="viewEnd"
         android:textAllCaps="false"
         android:textColor="@color/custom_grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/text_size_body"
         app:layout_constraintEnd_toEndOf="@+id/txtMainAcc"
         app:layout_constraintStart_toStartOf="@+id/bulletMarker4"
         app:layout_constraintTop_toBottomOf="@+id/txtAcc4" />
@@ -205,6 +205,7 @@
         android:background="@android:color/transparent"
         android:enabled="false"
         android:text="@string/back"
+        android:textSize="@dimen/text_size_body"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/custom_grey"
