--- a/app/src/main/res/layouts/notification_fragment_layouts/consumption_track_layouts/layout/consumption_track_layout.xml
+++ b/app/src/main/res/layouts/notification_fragment_layouts/consumption_track_layouts/layout/consumption_track_layout.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/lato_regular"
-        android:text="30"
+        android:text="N/A"
         android:textColor="@color/custom_grey"
         android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/txtPrevNumUnitsBought"
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/lato_regular"
-        android:text="10"
+        android:text="N/A"
         android:textColor="@color/custom_grey"
         android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/txtEstNumConsumed"
@@ -114,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/lato_regular"
-        android:text="20"
+        android:text="N/A"
         android:textColor="@color/custom_grey"
         android:textSize="@dimen/text_size_body"
         app:layout_constraintBottom_toBottomOf="@+id/txtEstRemaining"
